gitops/components/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: modelops-storage
spec:
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090
  selector:
    app: minio
