gitops/components/minio/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio
  namespace: modelops-storage
spec:
  port:
    targetPort: api
  to:
    kind: Service
    name: minio
  tls:
    termination: edge
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: modelops-storage
spec:
  port:
    targetPort: console
  to:
    kind: Service
    name: minio
  tls:
    termination: edge
